# rust-server-superdev

./: .env  .gitignore  Cargo.toml  Dockerfile  fly.toml
src/: main.rs
src/utils/: generate_keypair.rs  message.rs  mod.rs  response_types.rs  token.rs  transfer.rs
