[package]
name = "rust-server-superdev"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.4"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.1", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
dotenv = "0.15.0"
solana-client = "1.17.16"
solana-sdk = "1.17.16"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
bs58 = "0.5.0"
base64 = "0.21.7"
spl-token = "4.0.0"
spl-associated-token-account = "2.3.0"
